--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
 </head>
 
 <body>
+    <!-- navbar -->
+    <nav>
 
+    </nav>
+    <!-- fine navbar -->
+
+    <main>
+        <div class="container">
+            <div class="product"></div>
+            <div class="product"></div>
+            <div class="product"></div>
+            <div class="product"></div>
+            <div class="product"></div>
+            <div class="product"></div>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
