--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
     <title>Esercizio Boolando</title>
 
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
     <!-- navbar -->
     <nav>
+        <div class="container">
+            <ul>
+                <li>Donna</li>
+                <li>Uomo</li>
+                <li>Bambini</li>
+            </ul>
 
+            <img class="logo" src="./img/boolean-logo.png" alt="logo">
+
+            <div class="icons">
+                <img src="./img/account.svg" alt="">
+                <img src="./img/favourite.svg" alt="">
+                <img src="./img/cart.svg" alt="">
+            </div>
+        </div>
     </nav>
     <!-- fine navbar -->
 
