concluso layout main

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
     </main>
 
     <footer>
-
+        <div class="container">
+            <div class="Info">
+                <strong></strong>
+                <p></p>
+            </div>
+            <div class="social">
+                <strong></strong>
+            </div>
+        </div>
     </footer>
 </body>
 
