--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- navbar -->
     <nav>
         <div class="container">
+
             <ul>
                 <li>Donna</li>
                 <li>Uomo</li>
@@ -33,12 +34,22 @@
 
     <main>
         <div class="container">
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
+            <div class="product">
+                <img src="./img/1.webp" alt="maglietta uomo">
+                <div class="product-info">
+                    <strong class="brand">Levi's</strong>
+                    <h3 class="name">Related fit tee unisex</h3>
+                    <strong class="price">14,99 €</strong>
+                    <strong class="price price-old">29,99 €</strong>
+                </div>
+                <div class="favourite">
+                    <span>&hearts;</span>
+                </div>
+                <div class="tags">
+                    <strong class="sale label">-50%</strong>
+                    <strong class="green label">Sostenibilità</strong>
+                </div>
+            </div>
         </div>
     </main>
 
