conclusione main + bonus

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
         <div class="container">
-            <div class="product">
+            <div id="first" class="product">
                 <img src="./img/1.webp" alt="maglietta uomo">
                 <div class="product-info">
                     <strong class="brand">Levi's</strong>
@@ -47,6 +47,82 @@
                 </div>
                 <div class="tags">
                     <strong class="sale label">-50%</strong>
+                    <strong class="green label">Sostenibilità</strong>
+                </div>
+            </div>
+
+            <div id="second" class="product">
+                <img src="./img/2.webp" alt="roses tee">
+                <div class="product-info">
+                    <strong class="brand">Guess</strong>
+                    <h3 class="name">Roses Tee</h3>
+                    <strong class="price">20,99 €</strong>
+                    <strong class="price price-old">29,99 €</strong>
+                </div>
+                <div class="favourite">
+                    <span>&hearts;</span>
+                </div>
+                <div class="tags">
+                    <strong class="sale label">-30%</strong>
+                </div>
+            </div>
+
+            <div id="third" class="product">
+                <img src="./img/3.webp" alt="completo pastello">
+                <div class="product-info">
+                    <strong class="brand">Come zucchero filato</strong>
+                    <h3 class="name">Voglia di colori pastello</h3>
+                    <strong class="price">129,99 €</strong>
+                    <strong class="price price-old">184,99 €</strong>
+                </div>
+                <div class="favourite">
+                    <span>&hearts;</span>
+                </div>
+                <div class="tags">
+                    <strong class="sale label">-30%</strong>
+                </div>
+            </div>
+
+            <div id="fourth" class="product">
+                <img src="./img/4.webp" alt="tee unisex">
+                <div class="product-info">
+                    <strong class="brand">Levi's</strong>
+                    <h3 class="name">Tee unisex</h3>
+                    <strong class="price">14,99 €</strong>
+                    <strong class="price price-old">29,99 €</strong>
+                </div>
+                <div class="favourite">
+                    <span>&hearts;</span>
+                </div>
+                <div class="tags">
+                    <strong class="sale label">-50%</strong>
+                    <strong class="green label">Sostenibilità</strong>
+                </div>
+            </div>
+
+            <div id="fifth" class="product">
+                <img src="./img/5.webp" alt="stripe bodice">
+                <div class="product-info">
+                    <strong class="brand">Maya Deluxe</strong>
+                    <h3 class="name">Stripe bodice</h3>
+                    <strong class="price">99,99 €</strong>
+                </div>
+                <div class="favourite">
+                    <span>&hearts;</span>
+                </div>
+            </div>
+
+            <div id="sixth" class="product">
+                <img src="./img/6.webp" alt="maglione black">
+                <div class="product-info">
+                    <strong class="brand">Esprit</strong>
+                    <h3 class="name">Maglione black</h3>
+                    <strong class="price">29,99 €</strong>
+                </div>
+                <div class="favourite">
+                    <span>&hearts;</span>
+                </div>
+                <div class="tags">
                     <strong class="green label">Sostenibilità</strong>
                 </div>
             </div>
