--- a/index.html
+++ b/index.html
@@ -131,12 +131,23 @@
 
     <footer>
         <div class="container">
-            <div class="Info">
-                <strong></strong>
-                <p></p>
+            <div class="info">
+                <strong class="name">Boolando s.r.l</strong>
+                <div class="legal">
+                    <span>Informazioni legali</span>
+                    <span>Informativa sulla privacy</span>
+                    <span>Diritto di recesso</span>
+                </div>
             </div>
             <div class="social">
-                <strong></strong>
+                <strong class="find-us">Trovaci anche su</strong>
+                <div class="icons">
+                    <img src="./img/twitter.svg" alt="">
+                    <img src="./img/facebook.svg" alt="">
+                    <img src="./img/instagram.svg" alt="">
+                    <img src="./img/pinterest.svg" alt="">
+                    <img src="./img/youtube.svg" alt="">
+                </div>
             </div>
         </div>
     </footer>
