correzione gap cards + hover con opacity

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="container">
             <div id="first" class="product">
                 <img src="./img/1.webp" alt="maglietta uomo">
+                <img src="./img/1b.webp" alt="alternativa prodotto 1">
                 <div class="product-info">
                     <strong class="brand">Levi's</strong>
                     <h3 class="name">Related fit tee unisex</h3>
@@ -53,6 +54,7 @@
 
             <div id="second" class="product">
                 <img src="./img/2.webp" alt="roses tee">
+                <img src="./img/2b.webp" alt="alternativa prodotto 2">
                 <div class="product-info">
                     <strong class="brand">Guess</strong>
                     <h3 class="name">Roses Tee</h3>
@@ -69,6 +71,7 @@
 
             <div id="third" class="product">
                 <img src="./img/3.webp" alt="completo pastello">
+                <img src="./img/3b.webp" alt="alternativa prodotto 3">
                 <div class="product-info">
                     <strong class="brand">Come zucchero filato</strong>
                     <h3 class="name">Voglia di colori pastello</h3>
@@ -85,6 +88,7 @@
 
             <div id="fourth" class="product">
                 <img src="./img/4.webp" alt="tee unisex">
+                <img src="./img/4b.webp" alt="alternativa prodotto 4">
                 <div class="product-info">
                     <strong class="brand">Levi's</strong>
                     <h3 class="name">Tee unisex</h3>
@@ -102,6 +106,7 @@
 
             <div id="fifth" class="product">
                 <img src="./img/5.webp" alt="stripe bodice">
+                <img src="./img/5b.webp" alt="alternativa prodotto 5">
                 <div class="product-info">
                     <strong class="brand">Maya Deluxe</strong>
                     <h3 class="name">Stripe bodice</h3>
@@ -114,6 +119,7 @@
 
             <div id="sixth" class="product">
                 <img src="./img/6.webp" alt="maglione black">
+                <img src="./img/6b.webp" alt="alternativa prodotto 6">
                 <div class="product-info">
                     <strong class="brand">Esprit</strong>
                     <h3 class="name">Maglione black</h3>
